--- a/VB_LibraryGUI/VB_LibraryGUI/VB_LibraryGUI.vbproj
+++ b/VB_LibraryGUI/VB_LibraryGUI/VB_LibraryGUI.vbproj
@@ -16,7 +16,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\V-NSM-DC-01\Public\Northshore Time Sheet\Installer\Library\GUI\</PublishUrl>
+    <PublishUrl>\\V-NSM-DC-01\Public\NORTHSHORE\Northshore Time Sheet\Installer\Library\Gui-20141103\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -28,7 +28,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>5</ApplicationRevision>
+    <ApplicationRevision>6</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -70,10 +70,10 @@
     <ApplicationIcon>LibraryIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>486F52495F42BF5C7A7E749605038D103F306BE5</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>BAC30A4348FAFC3B1218E3B46E50B8529ED0D278</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>VB_LibraryGUI_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>VB_LibraryGUI_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -167,6 +167,7 @@
       <CustomToolNamespace>My</CustomToolNamespace>
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
+    <None Include="VB_LibraryGUI_1_TemporaryKey.pfx" />
     <None Include="VB_LibraryGUI_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
