--- a/VB_LibraryGUI/VB_LibraryGUI/VB_LibraryGUI.vbproj
+++ b/VB_LibraryGUI/VB_LibraryGUI/VB_LibraryGUI.vbproj
@@ -16,7 +16,7 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <IsWebBootstrapper>false</IsWebBootstrapper>
-    <PublishUrl>\\V-NSM-DC-01\Public\NORTHSHORE\Northshore Time Sheet\Installer\Library\Gui-20141103\</PublishUrl>
+    <PublishUrl>\\V-NSM-DC-01\NORTHSHORE\Northshore Time Sheet\Installer\Library\Gui-20141103\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Unc</InstallFrom>
     <UpdateEnabled>true</UpdateEnabled>
@@ -28,7 +28,7 @@
     <MapFileExtensions>true</MapFileExtensions>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>6</ApplicationRevision>
+    <ApplicationRevision>7</ApplicationRevision>
     <ApplicationVersion>1.0.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
