--- a/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/NorthshoreLibrary.csproj
+++ b/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/NorthshoreLibrary.csproj
@@ -138,6 +138,12 @@
   <ItemGroup>
     <None Include="Resources\dark_add%402x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dark_x%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dark_list---add%402x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
