--- a/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/NorthshoreLibrary.csproj
+++ b/NorthshoreLibraryVersion3/NorthshoreLibrary/NorthshoreLibrary/NorthshoreLibrary.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>NorthshoreLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -23,7 +24,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -48,6 +48,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>LibraryIcon2ICO.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>
+    </StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -66,6 +73,7 @@
     <Compile Include="DatabaseItem.cs" />
     <Compile Include="Detail.cs" />
     <Compile Include="DetailDatabase.cs" />
+    <Compile Include="Directory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,11 +86,18 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="KeyGen.cs" />
     <Compile Include="LibraryManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagDatabase.cs" />
+    <Compile Include="verify.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="verify.Designer.cs">
+      <DependentUpon>verify.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +114,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="verify.resx">
+      <DependentUpon>verify.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -143,6 +161,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\dark_list---add%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="LibraryIcon2ICO.ico" />
+    <None Include="Resources\light_comment%402x.png" />
+    <None Include="Resources\dark_warn.png" />
+    <None Include="Resources\dark_x.png" />
+    <None Include="Resources\dark_add.png" />
+    <None Include="Resources\dark_search.png" />
+    <None Include="Resources\dark_list---add.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
